public/css/style.css
:root {
    --yellow: #F8EA8C;
    --light-blue: #A4E8E0;
    --cyan: #4CD7D0;
    --dark-yellow: #E1C340;
    --dogfont: Verdana, Geneva, Tahoma, sans-serif;
}

* {
    font-family: 'Poppins', sans-serif;
}

.navbar-custom {
    background-color: var(--light-blue);
}

a {
    text-decoration: none;
    color: white;
}

#banner {
    font-style: bolder;
    font-size: 1.4rem;
    text-shadow: var(--yellow);
    font-family: var(--dogfont);
}

.bg-image {
    background-image: url('../image/dogs.jpg');
    background-attachment: fixed;
    min-height: 100vh;
    background-position: center;
    background-size: cover;
    background-repeat: repeat;
    position: relative;
}

#login-card,
#createac-card {
    background-color: var(--light-blue);
}

.border-custom {
    border-color: var(--cyan);
}


.btn-primary {
    font-style: bolder;
    background-color: var(--cyan);
    color: black;
}

.btn-primary:hover {
    background-color: var(--dark-yellow);
    color: black;
}

.btn-secondary {
    background-color: var(--cyan);
}

.btn-secondary:hover {
    background-color: var(--dark-yellow);
    color: white;
}

.btn-secondary:hover a {
    background-color: var(--dark-yellow);
    color: white;
}

.card {
    background-color: var(--light-blue);
}

footer {
    color: --cyan;
    background-color: var(--yellow);
    font-size: .625rem;
}

.justify-content-center {
    display: flex;
    justify-content: center;
    align-items: center;
}

#image-upload {
    display: flex;
    justify-content: center;
}

.file-upload-button {
    background-color: #4CD7D0;
}

textarea {
    width: 80%;
    height: 100px;
}

#comment-btn {
    /* width: 30rem; */
    background-color: #4CD7D0;
    border-radius: 0.375rem;
    /* margin-bottom: 20px; */
}

#comment-btn:hover {
    background-color: #E1C340;

}

.comment-form {
    display: flex;
    justify-content: center;
    align-items: center;
    justify-content: space-around;
    /* margin-bottom: 10px; */
    /* width: 80%; */
}

.input-field {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 80%;
    height: 100px;
    margin-bottom: 5px;
}

.single-post-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.single-post {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 80%;
}

.single-image {
    width: 50%;
}

.posts {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.log-dog {
    border-color: black;
    border-style: groove;
}

.login-title {
    margin-top: .5rem;
}

.img-responsive {
    width: 50%;
}

.profile-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.create-profile {
    text-align: center;
    margin-top: 8px;
}

.profile-group {
    padding: .5rem;
}

.profile-input {
    width: 100%;
}

.submit-profile {
    text-align: center;
    margin-top: 6px;
}

.info-block {
    font-size: 1.2rem;
}

.profile-header {
    font-weight: bold;
}
.title {
    text-align: center;
}

#post-head {
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: space-between;
    margin-top: 5px;
}

#post-head h2,
p,
a {
    font-family: var(--dogfont);
    text-align: center;
}

#post-head h2,
a {
    color: rgb(1, 144, 144);
    margin-left: -10px;
    margin-top: 10px;
}

#new-post h3,
label {
    font-family: var(--dogfont);
}

#uploadbtn {
    margin-bottom: 10px;
}

#post-title {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    width: 50%;

}

.post-input-title {
    width: 100%;
    height: 50px;
    border-radius: 4px;
    background-color: whitesmoke;
}

#namerz {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.deletebtn {
    background-color: 4CD7D0;
    height: 10%;
    border-radius: 30%;
}

.deletebtn:hover {
    background-color: var(--dark-yellow);
    color: black;
}

#post-content {
    margin-top: 10px;
    margin-bottom: 5px;
}

#bottomz {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
}

#commentz {
    display: flex;
    flex-direction: column;
    font-size: 14px;
}

#commentz p,
a {
    color: rgb(1, 144, 144);
}

#footerz {
    display: flex;
    align-self: flex-end;
    font-size: 12px;
}

textarea {
    width: 100%;
    height: 50px;
    border-radius: 4px;
    background-color: whitesmoke;
}

mainphotoz {
    height: auto;
    width: 100px;
}

#comment-card-date {
    font-size: 12px;
    display: flex;
    align-items: center;
    margin-bottom: 0px;
    margin-right: 8px;
}

#post-head-commentz {
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: space-between;
    margin: 5px;
}

.text-commentz {
    display: flex;
    align-items: center;
}

.like {
    background-color: transparent;
    border: none;

}

.like img {
    width: 70px;
    height: 70px;
    background-color: transparent;
}

.like:active {
    transform: translateY(4px);
}

.like-number {
    text-align: center;
    color: rgb(1, 144, 144);
}

#namerz-commentz {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-left: 10px;
}

#avatars-options {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin-left: 10px;
    justify-content: space-around;
}

#avatar {
    margin-left: 10px;
}

